fixed multiline problem for line-behind component

--- a/app/assets/stylesheets/components/line-behind/_heading-with-line-behind.scss
+++ b/app/assets/stylesheets/components/line-behind/_heading-with-line-behind.scss
@@ -14,7 +14,7 @@
   @extend %display__block;
   @extend %border-top__1px__solid__secondary;
   @extend %position__absolute;
-  @extend %bottom__0pt5em;
+  @extend %bottom__50pct;
   @extend %z-index__0;
 }
 
