--- a/app/assets/stylesheets/helpers/_bottom.scss
+++ b/app/assets/stylesheets/helpers/_bottom.scss
@@ -3,3 +3,7 @@
 %bottom__0pt5em {
   bottom: 0.5em;
 }
+
+%bottom__50pct {
+  bottom: 50%;
+}
